# wrangler-decision-engine

./: .gitignore  README.md  pyproject.toml  spec.md  workflow.md
4xe-risk/: proposal.md
analysis-designs/: trim_path.md
config/: order_guide.json  order_guide_notes.md
data/: features.json  mod_pricing.json
discovery/: report.md
prior-art/: report.md
src/engine/: __init__.py  cli.py  workbook.py  xlsx.py
src/engine/analysis/: __init__.py  financing.py  levers.py  ongoing_costs.py  sensitivity.py  sourcing.py  timing.py  trim_path.py
src/engine/data/: __init__.py  depreciation.py  features.py  incentives.py  lease.py  mod_pricing.py  options.py  tax_rules.py  trims.py  used.py
src/engine/refresh/: __init__.py  merge.py
tests/: conftest.py  test_analysis_modules.py  test_data_features.py  test_data_mod_pricing.py  test_data_modules.py  test_data_trims.py  test_e2e.py  test_refresh_module.py  test_xlsx.py
