[project]
name = "wrangler-engine"
version = "0.1.0"
description = "Data loader + renderer for the Wrangler decision engine .xlsx report"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
engine = "engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
